--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "typescript": "^5.4.5"
   },
   "dependencies": {
-    "fastify": "^4.27.0"
+    "fastify": "^4.27.0",
+    "string": "^3.3.3"
   }
 }
