Implement a dummy offline schedule generator.
A dummy schedule generator uses a fixed list of video files with durations, and generates an indefinite random sequence of playback, ensuring no two consecutive playback uses the same video.

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Node based backed service for Raspberry-Pi device",
   "main": "index.ts",
   "scripts": {
-    "dev": "NODE_ENV=development tsnd --respawn src/index.ts",
+    "dev": "NODE_ENV=development tsnd --watch ./src/ --respawn src/index.ts",
     "build": "tsc",
     "test": "jest --forceExit"
   },
