Write schedule to disk
Split schedule entries by a time bucket, and write the entries in disk

--- a/.gitignore
+++ b/.gitignore
@@ -4,8 +4,12 @@ logs
 npm-debug.log*
 .pnpm-debug.log*
 
+# OS file.
+.DS_Store
+
 # Nuxt.js build / generate output
 dist
+data
 
 # Diagnostic reports (https://nodejs.org/api/report.html)
 report.[0-9]*.[0-9]*.[0-9]*.[0-9]*.json
