--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "index.ts",
   "scripts": {
     "dev": "NODE_ENV=development tsnd --watch ./src/ --respawn src/index.ts",
+    "dev:wsserver": "NODE_ENV=development tsnd --watch ./src-wsserver/ --respawn src-wsserver/index.ts",
     "build": "tsc",
     "test": "jest --forceExit"
   },
@@ -14,11 +15,12 @@
   "private": "true",
   "devDependencies": {
     "@types/node": "^20.12.12",
+    "@types/ws": "^8.5.10",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.4.5"
   },
   "dependencies": {
     "fastify": "^4.27.0",
-    "string": "^3.3.3"
+    "ws": "^8.17.0"
   }
 }
