--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "typescript": "^5.4.5"
   },
   "dependencies": {
+    "dgram-as-promised": "^5.0.1",
     "fastify": "^4.27.0",
     "ws": "^8.17.0"
   }
